I don't know, I did something but not repair stars on mobile
Took 6 minutes

--- a/src/css/style-about.css
+++ b/src/css/style-about.css
@@ -219,8 +219,6 @@ button:active, .button:active{
     .content {
         flex-direction: column;
 
-        max-height: 100svh;
-
         gap: 12px;
 
         transform: translateY(-30px);
@@ -239,13 +237,11 @@ button:active, .button:active{
 
     .info {
         width: 85svw;
-        height: fit-content;
     }
 }
 
 @media (min-width: 425px) {
     .info {
         width: 85svw;
-        height: fit-content;
     }
 }
